# putemg-analysis

./: .gitignore  README.md  data-analysis.ipynb  pyproject.toml
putemg_download/: __init__.py  download.py
