[tool.poetry]
name = "putemg-analysis"
version = "0.1.0"
description = ""
authors = ["Kane Rodriguez <kanerodriguezpro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pre-commit = "^2.7.1"
aiohttp = "^3.6.2"
pandas = "^1.1.3"
matplotlib = "^3.3.2"
ipympl = "^0.5.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
